added contact stuff

--- a/website/baseStyle/base.html
+++ b/website/baseStyle/base.html
@@ -51,9 +51,6 @@ body {
                 <div class="backgroundTopImage">
                     <div class="titleBox">
                         <!-- add title here -->
-                        <h1>
-                        The website
-                        </h1>
                     </div>
                 </div>
                 <div class="backgroundMidImage">
@@ -74,6 +71,11 @@ body {
                     </div>
                 </div>
                 <div class="backgroundBottomImage">
+                    <div class="titleBox">
+                                    <h1>
+                                        If you found bugs or spelling mistakes please contact: koningkaas05@gmail.com
+                                    </h1>
+                                    </div>
                 </div>
             </div>
         </ul>  
