--- a/website/school/drawingRobotVWO6/drawingRobotLego.html
+++ b/website/school/drawingRobotVWO6/drawingRobotLego.html
@@ -66,9 +66,6 @@ body {
                         <div class="contentBox">
                             <div class="contentBackgroundTopImage">
                                 <div class="titelBox">
-                                    <h1>
-                                        Whats this website.
-                                    </h1>
                                 </div>
                             </div>
                                 <div class="contentBackgroundMidImage">
@@ -102,6 +99,11 @@ body {
                     </div>
                 </div>
                 <div class="backgroundBottomImage">
+                    <div class="titleBox">
+                                    <h1>
+                                        If you found bugs or spelling mistakes please contact: koningkaas05@gmail.com
+                                    </h1>
+                                    </div>
                 </div>
         </ul>  
     </nav>
