--- a/website/school/soulbreakerVWO5/soulbreakerEnemies.html
+++ b/website/school/soulbreakerVWO5/soulbreakerEnemies.html
@@ -137,6 +137,11 @@ body {
                     </div>
                 </div>
                 <div class="backgroundBottomImage">
+                    <div class="titleBox">
+                                    <h1>
+                                        If you found bugs or spelling mistakes please contact: koningkaas05@gmail.com
+                                    </h1>
+                                    </div>
                 </div>
         </ul>  
     </nav>
