--- a/website/school/soulbreakerVWO5/soulbreakerPlayer.html
+++ b/website/school/soulbreakerVWO5/soulbreakerPlayer.html
@@ -176,8 +176,17 @@ Movement:
                                             What classes are there?
                                         </h1>
                                         <p>
-                                            
+                                            When a player wants to start the game it can choose between a day scene and a night scene. Then it can choose a class. There are three classes a mage, a archer and a sword user. The mage isnt in the game yet.
                                         </p>
+                                        <h1>
+                                            How do the weapons work and how can the player use them?
+                                        </h1>
+                                        <p>
+                                            Each weapon consists of three parts that have there own stats. Those stats determine the damage, the knockback, the energie cost and some other stuff. The stats of those three parts get combined and are the stats of the weapon. When a player uses a weapon the energie cost gets removed from the players energie and when the player doesnt have enough energie left then the player cant attack. The energie slowly regenerates when the player isnt attacking.
+                                        </p>
+                                        <h1>
+                                            How do the melee attacks work?
+                                        </h1>
                                 </div>
                             </div>
                             <div class="contentBackgroundBottomImage">
