--- a/website/games/games.html
+++ b/website/games/games.html
@@ -63,11 +63,8 @@ body {
                                             What wil you see here.
                                         </h1>
                                         <p>
-                                            Games.
+                                            Games i made most of them are javascript games.
                                         </p>
-                                        <h2>
-                                            Websites i used to make this website:
-                                        </h2>
                                     </div>
                                 </div>
                                 <div class="contentBackgroundBottomImage">
