--- a/website/home/home.html
+++ b/website/home/home.html
@@ -81,11 +81,31 @@ body {
                                         <p>
                                             This website is made to show what   programs and other CS related stuff ive made like games, robots and other stuff.
                                         </p>
-                                        <h2>
-                                            Websites i used to make this website:
-                                        </h2>
+                                        <h1>
+                                            Plans for the future.
+                                        </h1>
                                     </div>
-                                </div>
+                                    <div class="imageBox">
+                                        <h1>
+                                            Get my own server to host my website on.
+                                        </h1>
+                                    </div>
+                                    <div class="imageBox">
+                                        <h1>
+                                            Use PHP to add a search bar.
+                                        </h1>
+                                    </div>
+                                    <div class="imageBox">
+                                        <h1>
+                                            Add javascript games to the website.
+                                        </h1>
+                                        </div>
+                                    <div class="textBox">
+                                        <h1>
+                                            Websites i used to make this website:
+                                        </h1>
+                                        </div>
+                                    </div>
                                 <div class="contentBackgroundBottomImage">
                             </div>
                             </div>
