--- a/website/school/school.html
+++ b/website/school/school.html
@@ -63,7 +63,7 @@ body {
                                             What wil you see here.
                                         </h1>
                                         <p>
-                                            Games.
+                                            Projects i made for school.
                                         </p>
                                         <h2>
                                             Websites i used to make this website:
